# kv-cache-research

./: .gitignore  Final Report.md  README.md
cachebench-repo/cachelib/: CMakeLists.txt
cachebench-repo/cachelib/cachebench/: CMakeLists.txt
cachebench-repo/cachelib/cachebench/cache/: ._RocksDbCache.h  RocksDbCache.cpp  RocksDbCache.h
cachebench-repo/cachelib/cachebench/runner/: RocksDbStressor.cpp  RocksDbStressor.h  Stressor.cpp
cachebench-repo/cachelib/cachebench/test_configs/hit_ratio/kvcache_reg/: ._pop.json
cachebench-script/: cfg_gen.py  run_benchmark.sh
cachebench-script/cachelib_configs/: balanced_KV-large_20G.json  balanced_KV-large_2G.json  balanced_KV-large_40G.json  balanced_KV-mixed_20G.json  balanced_KV-mixed_2G.json  balanced_KV-mixed_40G.json  balanced_KV-small_20G.json  balanced_KV-small_2G.json  balanced_KV-small_40G.json  readheavy_KV-large_20G.json  readheavy_KV-large_2G.json  readheavy_KV-large_40G.json  readheavy_KV-mixed_20G.json  readheavy_KV-mixed_2G.json  readheavy_KV-mixed_40G.json  readheavy_KV-small_20G.json  readheavy_KV-small_2G.json  readheavy_KV-small_40G.json  readonly_KV-large_20G.json  readonly_KV-large_2G.json  readonly_KV-large_40G.json  readonly_KV-mixed_20G.json  readonly_KV-mixed_2G.json  readonly_KV-mixed_40G.json  readonly_KV-small_20G.json  readonly_KV-small_2G.json  readonly_KV-small_40G.json  setheavy_KV-large_20G.json  setheavy_KV-large_2G.json  setheavy_KV-large_40G.json  setheavy_KV-mixed_20G.json  setheavy_KV-mixed_2G.json  setheavy_KV-mixed_40G.json  setheavy_KV-small_20G.json  setheavy_KV-small_2G.json  setheavy_KV-small_40G.json
cachebench-script/memcached_configs/: balanced_KV-large_20G.json  balanced_KV-large_2G.json  balanced_KV-large_40G.json  balanced_KV-mixed_20G.json  balanced_KV-mixed_2G.json  balanced_KV-mixed_40G.json  balanced_KV-small_20G.json  balanced_KV-small_2G.json  balanced_KV-small_40G.json  readheavy_KV-large_20G.json  readheavy_KV-large_2G.json  readheavy_KV-large_40G.json  readheavy_KV-mixed_20G.json  readheavy_KV-mixed_2G.json  readheavy_KV-mixed_40G.json  readheavy_KV-small_20G.json  readheavy_KV-small_2G.json  readheavy_KV-small_40G.json  readonly_KV-large_20G.json  readonly_KV-large_2G.json  readonly_KV-large_40G.json  readonly_KV-mixed_20G.json  readonly_KV-mixed_2G.json  readonly_KV-mixed_40G.json  readonly_KV-small_20G.json  readonly_KV-small_2G.json  readonly_KV-small_40G.json  setheavy_KV-large_20G.json  setheavy_KV-large_2G.json  setheavy_KV-large_40G.json  setheavy_KV-mixed_20G.json  setheavy_KV-mixed_2G.json  setheavy_KV-mixed_40G.json  setheavy_KV-small_20G.json  setheavy_KV-small_2G.json  setheavy_KV-small_40G.json
cachebench-script/rocksdb_configs/: balanced_KV-large_20G.json  balanced_KV-large_2G.json  balanced_KV-large_40G.json  balanced_KV-mixed_20G.json  balanced_KV-mixed_2G.json  balanced_KV-mixed_40G.json  balanced_KV-small_20G.json  balanced_KV-small_2G.json  balanced_KV-small_40G.json  readheavy_KV-large_20G.json  readheavy_KV-large_2G.json  readheavy_KV-large_40G.json  readheavy_KV-mixed_20G.json  readheavy_KV-mixed_2G.json  readheavy_KV-mixed_40G.json  readheavy_KV-small_20G.json  readheavy_KV-small_2G.json  readheavy_KV-small_40G.json  (+18 more)
ycsb-repo/: checkstyle.xml  pom.xml
ycsb-script/: README.md  dev_single.sh  run_benchmark.sh  run_output.txt  watch_io.sh
(+43 files in other folders)
